@@ -26,7 +26,6 @@ import java.io.Reader;
 import java.io.Writer;
 import java.net.HttpURLConnection;
 import java.net.InetAddress;
-import java.net.MalformedURLException;
 import java.net.SocketException;
 import java.net.SocketTimeoutException;
 import java.net.URI;
@@ -40,7 +39,7 @@ import java.util.zip.GZIPInputStream;
 
 final class PeerImpl implements Peer {
 
-    private final String peerAddress;
+    private final String host;
     private volatile String announcedAddress;
     private volatile int port;
     private volatile boolean shareAddress;
@@ -48,8 +47,7 @@ final class PeerImpl implements Peer {
     private volatile String platform;
     private volatile String application;
     private volatile String version;
-    private volatile boolean isOldVersion;
-    private volatile String nxt_version;    
+    private volatile boolean isOldVersion; 
     private volatile long adjustedWeight;
     private volatile long blacklistingTime;
     private volatile String blacklistingCause;
@@ -62,19 +60,19 @@ final class PeerImpl implements Peer {
     private volatile int hallmarkBalanceHeight;
     private volatile boolean gossipEnabled;
 
-    PeerImpl(String peerAddress, String announcedAddress) {
-        this.peerAddress = peerAddress;
+    PeerImpl(String host, String announcedAddress) {
+        this.host = host;
         this.announcedAddress = announcedAddress;
         try {
-            this.port = new URL("http://" + announcedAddress).getPort();
-        } catch (MalformedURLException ignore) {}
+            this.port = new URI("http://" + announcedAddress).getPort();
+        } catch (URISyntaxException ignore) {}
         this.state = State.NON_CONNECTED;
         this.shareAddress = true;
     }
 
     @Override
-    public String getPeerAddress() {
-        return peerAddress;
+    public String getHost() {
+        return host;
     }
 
     @Override
@@ -157,7 +155,7 @@ final class PeerImpl implements Peer {
                 }
             }
             if (isOldVersion) {
-                Logger.logDebugMessage(String.format("Blacklisting %s version %s", peerAddress, version));
+                Logger.logDebugMessage(String.format("Blacklisting %s version %s", host, version));
                 blacklistingCause = "Old version: " + version;
                 setState(State.NON_CONNECTED);
                 Peers.notifyListeners(this, Peers.Event.BLACKLIST);
@@ -205,24 +203,28 @@ final class PeerImpl implements Peer {
     }
 
     void setAnnouncedAddress(String announcedAddress) {
-        String announcedPeerAddress = Peers.normalizeHostAndPort(announcedAddress);
-        if (announcedPeerAddress != null) {
-            this.announcedAddress = announcedPeerAddress;
+        this.announcedAddress = announcedAddress;
+        if (announcedAddress != null) {
             try {
-                this.port = new URL("http://" + announcedPeerAddress).getPort();
-            } catch (MalformedURLException ignore) {}
+                this.port = new URI("http://" + announcedAddress).getPort();
+            } catch (URISyntaxException e) {
+                this.port = -1;
+            }
+        } else {
+            this.port = -1;
         }
     }
 
-    int getPort() {
-        return port;
+    @Override
+    public int getPort() {
+        return port <= 0 ? Peers.getDefaultPeerPort() : port;
     }
 
     @Override
     public Hallmark getHallmark() {
         return hallmark;
     }
-    
+
     @Override
     public boolean getGossipEnabled() {
         return gossipEnabled;
@@ -249,14 +251,15 @@ final class PeerImpl implements Peer {
     @Override
     public boolean isBlacklisted() {
         if (isWhitelisted()) {
-          return false;
-        }
-        return blacklistingTime > 0 || isOldVersion || Peers.knownBlacklistedPeers.contains(peerAddress);
+            return false;
+        }    
+        return blacklistingTime > 0 || isOldVersion || Peers.knownBlacklistedPeers.contains(host)
+                || (announcedAddress != null && Peers.knownBlacklistedPeers.contains(announcedAddress));
     }
     
     @Override
     public boolean isWhitelisted() {
-      return Peers.knownWhitelistedPeers.contains(peerAddress);
+      return Peers.knownWhitelistedPeers.contains(host);
     }
 
     @Override
@@ -272,9 +275,9 @@ final class PeerImpl implements Peer {
         }
         if (! isBlacklisted()) {
             if (cause instanceof IOException || cause instanceof ParseException) {
-                Logger.logDebugMessage("Blacklisting " + peerAddress + " because of: " + cause.toString());
+                Logger.logDebugMessage("Blacklisting " + host + " because of: " + cause.toString());
             } else {
-                Logger.logDebugMessage("Blacklisting " + peerAddress + " because of: " + cause.toString(), cause);
+                Logger.logDebugMessage("Blacklisting " + host + " because of: " + cause.toString(), cause);
             }
         }
         blacklist(cause.toString() == null ? cause.getClass().getName() : cause.toString());
@@ -290,7 +293,7 @@ final class PeerImpl implements Peer {
 
     @Override
     public void unBlacklist() {
-        Logger.logDebugMessage("Unblacklisting " + peerAddress);
+        Logger.logDebugMessage("Unblacklisting " + host);
         setState(State.NON_CONNECTED);
         blacklistingTime = 0;
         blacklistingCause = null;
@@ -346,7 +349,6 @@ final class PeerImpl implements Peer {
     public JSONObject send(final JSONStreamAware request, int maxResponseSize) {
 
         JSONObject response = null;
-
         String log = null;
         boolean showLog = false;
         HttpURLConnection connection = null;
@@ -354,15 +356,7 @@ final class PeerImpl implements Peer {
 
         try {
 
-            String address = announcedAddress != null ? announcedAddress : peerAddress;
-            StringBuilder buf = new StringBuilder("http://");
-            buf.append(address);
-            if (port <= 0) {
-                buf.append(':');
-                buf.append(Peers.getDefaultPeerPort());
-            }
-            buf.append("/nxt");
-            URL url = new URL(buf.toString());
+            URL url = new URL("http://" + host + ':' + getPort() + "/nxt");
 
             if (communicationLoggingMask != 0) {
                 log = "\"" + url.toString() + "\": " + JSON.toString(request);
@@ -412,7 +406,7 @@ final class PeerImpl implements Peer {
                     }
                     updateDownloadedVolume(cis.getCount());
                     if (response != null && response.get("error") != null) {
-                        Logger.logDebugMessage("Peer " + peerAddress + " version " + version + " returned error: " + response.toJSONString()
+                        Logger.logDebugMessage("Peer " + host + " version " + version + " returned error: " + response.toJSONString()
                                 + ", request was: " + JSON.toString(request) + ", disconnecting");
                         deactivate();
                     }
@@ -422,7 +416,7 @@ final class PeerImpl implements Peer {
                     log += " >>> Peer responded with HTTP " + connection.getResponseCode() + " code!";
                     showLog = true;
                 }
-                Logger.logDebugMessage("Peer " + peerAddress + " responded with HTTP " + connection.getResponseCode());
+                Logger.logDebugMessage("Peer " + host + " responded with HTTP " + connection.getResponseCode());
                 deactivate();
                 connection.disconnect();
             }
@@ -460,50 +454,114 @@ final class PeerImpl implements Peer {
         } else if (getWeight() < o.getWeight()) {
             return 1;
         }
-        return getPeerAddress().compareTo(o.getPeerAddress());
+        return getHost().compareTo(o.getHost());
     }
 
     void connect() {
         lastConnectAttempt = Nxt.getEpochTime();
+        if (!Peers.ignorePeerAnnouncedAddress && announcedAddress != null) {
+            try {
+                URI uri = new URI("http://" + announcedAddress);
+                InetAddress inetAddress = InetAddress.getByName(uri.getHost());
+                if (!inetAddress.equals(InetAddress.getByName(host))) {
+                    Logger.logDebugMessage("Announced address " + announcedAddress + " now points to " + inetAddress.getHostAddress() + ", replacing peer " + host);
+                    Peers.removePeer(this);
+                    PeerImpl newPeer = Peers.findOrCreatePeer(inetAddress, announcedAddress, true);
+                    if (newPeer != null) {
+                        Peers.addPeer(newPeer);
+                        newPeer.connect();
+                    }
+                    return;
+                }
+            } catch (URISyntaxException | UnknownHostException e) {
+                blacklist(e);
+                return;
+            }
+        }
         JSONObject response = send(Peers.myPeerInfoRequest);
         if (response != null && (application = (String)response.get("application")) != null) {
+            lastUpdated = lastConnectAttempt;
             setVersion((String) response.get("version"));
             platform = (String)response.get("platform");
             shareAddress = Boolean.TRUE.equals(response.get("shareAddress"));
+            analyzeHallmark((String) response.get("hallmark"));
 
             if (!Peers.ignorePeerAnnouncedAddress) {
                 String newAnnouncedAddress = Convert.emptyToNull((String) response.get("announcedAddress"));
                 if (newAnnouncedAddress != null) {
-                    newAnnouncedAddress = Peers.addressWithPort(newAnnouncedAddress);
-                    if (newAnnouncedAddress != null && !newAnnouncedAddress.equals(announcedAddress)) {
-                        // force verification of changed announced address
-                        Logger.logDebugMessage("Peer " + peerAddress + " has new announced address " + newAnnouncedAddress + ", old is " + announcedAddress);
-                        setState(Peer.State.NON_CONNECTED);
-                        setAnnouncedAddress(newAnnouncedAddress);
-                        return;
+                    newAnnouncedAddress = Peers.addressWithPort(newAnnouncedAddress.toLowerCase());
+                    if (newAnnouncedAddress != null) {
+                        if (!verifyAnnouncedAddress(newAnnouncedAddress)) {
+                            Logger.logDebugMessage("Connect: new announced address for " + host + " not accepted");
+                            if (!verifyAnnouncedAddress(announcedAddress)) {
+                                Logger.logDebugMessage("Connect: old announced address for " + host + " no longer valid");
+                                Peers.setAnnouncedAddress(this, host);
+                            }
+                            setState(State.NON_CONNECTED);
+                            return;
+                        }
+                        if (!newAnnouncedAddress.equals(announcedAddress)) {
+                            Logger.logDebugMessage("Connect: peer " + host + " has new announced address " + newAnnouncedAddress + ", old is " + announcedAddress);
+                            int oldPort = getPort();
+                            Peers.setAnnouncedAddress(this, newAnnouncedAddress);
+                            if (getPort() != oldPort) {
+                                // force checking connectivity to new announced port
+                                setState(State.NON_CONNECTED);
+                                return;
+                            }
+                        }
                     }
+                } else {
+                    Peers.setAnnouncedAddress(this, host);
                 }
             }
 
             if (announcedAddress == null) {
-                setAnnouncedAddress(peerAddress);
-                //Logger.logDebugMessage("Connected to peer without announced address, setting to " + peerAddress);
+                if (hallmark == null || hallmark.getPort() == Peers.getDefaultPeerPort()) {
+                    Peers.setAnnouncedAddress(this, host);
+                    Logger.logDebugMessage("Connected to peer without announced address, setting to " + host);
+                } else {
+                    setState(State.NON_CONNECTED);
+                    return;
+                }
             }
-            analyzeHallmark(announcedAddress, (String)response.get("hallmark"));
             if (!isOldVersion) {
                 setState(State.CONNECTED);
-                Peers.addOrUpdate(this);
             } else if (!isBlacklisted()) {
                 blacklist("Old version: " + version);
             }
-            lastUpdated = lastConnectAttempt;
         } else {
             //Logger.logDebugMessage("Failed to connect to peer " + peerAddress);
             setState(State.NON_CONNECTED);
         }
     }
 
-    boolean analyzeHallmark(String address, final String hallmarkString) {
+    boolean verifyAnnouncedAddress(String newAnnouncedAddress) {
+        if (newAnnouncedAddress == null) {
+            return true;
+        }
+        try {
+            URI uri = new URI("http://" + newAnnouncedAddress);
+            int announcedPort = uri.getPort() == -1 ? Peers.getDefaultPeerPort() : uri.getPort();
+            if (hallmark != null && announcedPort != hallmark.getPort()) {
+                Logger.logDebugMessage("Announced port " + announcedPort + " does not match hallmark " + hallmark.getPort() + ", ignoring hallmark for " + host);
+                hallmark = null;
+            }
+            InetAddress address = InetAddress.getByName(host);
+            for (InetAddress inetAddress : InetAddress.getAllByName(uri.getHost())) {
+                if (inetAddress.equals(address)) {
+                    return true;
+                }
+            }
+            Logger.logDebugMessage("Announced address " + newAnnouncedAddress + " does not resolve to " + host);
+        } catch (UnknownHostException|URISyntaxException e) {
+            Logger.logDebugMessage(e.toString());
+            blacklist(e);
+        }
+        return false;
+    }
+
+    boolean analyzeHallmark(final String hallmarkString) {
 
         if (hallmarkString == null && this.hallmark == null) {
             return true;
@@ -519,8 +577,6 @@ final class PeerImpl implements Peer {
         }
 
         try {
-            URI uri = new URI("http://" + address.trim());
-            String host = uri.getHost();
 
             Hallmark hallmark = Hallmark.parseHallmark(hallmarkString);
             if (!hallmark.isValid()) {
@@ -529,16 +585,12 @@ final class PeerImpl implements Peer {
                 return false;
             }
             if (!hallmark.getHost().equals(host)) {
-                InetAddress[] hosts = InetAddress.getAllByName(host);
-                InetAddress[] hallmarks =
-                        InetAddress.getAllByName(hallmark.getHost());
+                InetAddress hostAddress = InetAddress.getByName(host);
                 boolean validHost = false;
-                hostLoop: for (InetAddress nextHost : hosts) {
-                    for (InetAddress nextHallmark : hallmarks) {
-                        if (nextHost.equals(nextHallmark)) {
-                            validHost = true;
-                            break hostLoop;
-                        }
+                for (InetAddress nextHallmark : InetAddress.getAllByName(hallmark.getHost())) {
+                    if (hostAddress.equals(nextHallmark)) {
+                        validHost = true;
+                        break;
                     }
                 }
                 if (!validHost) {
@@ -575,8 +627,8 @@ final class PeerImpl implements Peer {
             return true;
 
         } catch (UnknownHostException ignore) {
-        } catch (URISyntaxException | RuntimeException e) {
-            Logger.logDebugMessage("Failed to analyze hallmark for peer " + address + ", " + e.toString(), e);
+        } catch (RuntimeException e) {
+            Logger.logDebugMessage("Failed to analyze hallmark for peer " + host + ", " + e.toString(), e);
         }
         this.hallmark = null;
         return false;
